2002-07-09  Michal Ludvig  <mludvig@suse.cz>

	* NEWS: Note about dwarf2cfi improvements.

2002-07-09  Pierre Muller  <muller@ics.u-strasbg.fr>

	Merge from mainline:

	2002-07-04  Pierre Muller  <muller@ics.u-strasbg.fr>
	* i386-nat.c (child_post_startup_inferior): New function
	calling i386_cleanup_dregs if
	I386_USE_GENERIC_WATCHPOINTS is defined.
	* config/i386/nm-i386.h: define CHILD_POST_STARTUP_INFERIOR
	conditional to acknowledge that i386-nat.c has its
	own child_post_startup_inferior function.

2002-07-03  Michal Ludvig  <mludvig@suse.cz>

	Merge from mainline:

	2002-06-21  Michal Ludvig  <mludvig@suse.cz>
	* dwarf2cfi.c (read_encoded_pointer): Don't handle pointer 
	encoding anymore.
	(pointer_encoding, enum ptr_encoding): New.
	(execute_cfa_program): Take care about pointer encoding.	
	(dwarf2_build_frame_info): Only call parse_frame_info for 
	.debug_frame and .eh_frame.
	(parse_frame_info): New, derived from former dwarf2_build_frame_info.
	fixed augmentation handling, added relative addressing, 
	ignore duplicate FDEs. Added comments.
	* dwarf2cfi.c: Reindented.
	
	2002-06-20  Michal Ludvig  <mludvig@suse.cz>
	* x86-64-tdep.c (x86_64_register_nr2name): Rename to 
	x86_64_register_name. Return type changed to 'const char *'.
	(x86_64_register_name2nr): Rename to x86_64_register_number.
	(x86_64_gdbarch_init): Update to reflect the change.
	* x86-64-tdep.h: Ditto.
	* x86-64-linux-nat.c (x86_64_fxsave_offset)
	(supply_fpregset): Ditto.

	2002-06-11  Michal Ludvig  <mludvig@suse.cz>
	* dwarf2cfi.c (unwind_tmp_obstack_init): New.
	(unwind_tmp_obstack_free, parse_frame_info)
	(update_context, cfi_read_fp, cfi_write_fp)
	(cfi_frame_chain, cfi_init_extra_frame_info)
	(cfi_virtual_frame_pointer): Use the above function.
	* x86-64-tdep.c (x86_64_skip_prologue): Fix to work on functions
	without debug information too.

	2002-06-07  Michal Ludvig  <mludvig@suse.cz>
	* x86-64-linux-nat.c (x86_64_fxsave_offset): New.